Add method to get mem pool size
