# docs/swagger.json
@@ -4488,6 +4488,46 @@
                 }
             }
         },
+        "/MemPool/Txs/Count": {
+            "get": {
+                "tags": [
+                    "MemPool"
+                ],
+                "operationId": "MemPoolTxsCount",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "type": "integer"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "429": {
+                        "description": "Request number limit exceeded"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    },
+                    "503": {
+                        "description": "Service unavailable"
+                    }
+                }
+            }
+        },
         "/Miners/History": {
             "get": {
                 "tags": [
